// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Articles ArticlesComponent Loaded & articles array empty render correctly ArticlesComponent 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ArticlesComponent
    articles={Array []}
    authorId=""
    classes={
      Object {
        "root": "",
      }
    }
    errorMsg={null}
    isLoaded={true}
    isLoading={false}
    onClearArticles={[Function]}
    onGetAllArticles={[Function]}
    onGetArticlesByAuthorId={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        false,
        null,
        <span
          id="articles-empty-message"
        >
          No articles yep
        </span>,
        null,
      ],
    },
    "ref": null,
    "rendered": Array [
      false,
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "No articles yep",
          "className": undefined,
          "id": "articles-empty-message",
        },
        "ref": null,
        "rendered": "No articles yep",
        "type": "span",
      },
      null,
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          false,
          null,
          <span
            id="articles-empty-message"
          >
            No articles yep
          </span>,
          null,
        ],
      },
      "ref": null,
      "rendered": Array [
        false,
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "No articles yep",
            "className": undefined,
            "id": "articles-empty-message",
          },
          "ref": null,
          "rendered": "No articles yep",
          "type": "span",
        },
        null,
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Articles ArticlesComponent componentWillUnmount render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ArticlesComponent
    articles={Array []}
    authorId=""
    classes={
      Object {
        "root": "",
      }
    }
    errorMsg={null}
    isLoaded={false}
    isLoading={false}
    onClearArticles={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    onGetAllArticles={[Function]}
    onGetArticlesByAuthorId={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        false,
        null,
        null,
        null,
      ],
    },
    "ref": null,
    "rendered": Array [
      false,
      null,
      null,
      null,
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          false,
          null,
          null,
          null,
        ],
      },
      "ref": null,
      "rendered": Array [
        false,
        null,
        null,
        null,
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Articles ArticlesComponent initial + authorId render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ArticlesComponent
    articles={Array []}
    authorId="123"
    classes={
      Object {
        "root": "",
      }
    }
    errorMsg={null}
    isLoaded={false}
    isLoading={false}
    onClearArticles={[Function]}
    onGetAllArticles={[Function]}
    onGetArticlesByAuthorId={
      [MockFunction] {
        "calls": Array [
          Array [
            "123",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        false,
        null,
        null,
        null,
      ],
    },
    "ref": null,
    "rendered": Array [
      false,
      null,
      null,
      null,
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          false,
          null,
          null,
          null,
        ],
      },
      "ref": null,
      "rendered": Array [
        false,
        null,
        null,
        null,
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Articles ArticlesComponent initial render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ArticlesComponent
    articles={Array []}
    authorId=""
    classes={
      Object {
        "root": "",
      }
    }
    errorMsg={null}
    isLoaded={false}
    isLoading={false}
    onClearArticles={[Function]}
    onGetAllArticles={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    onGetArticlesByAuthorId={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        false,
        null,
        null,
        null,
      ],
    },
    "ref": null,
    "rendered": Array [
      false,
      null,
      null,
      null,
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          false,
          null,
          null,
          null,
        ],
      },
      "ref": null,
      "rendered": Array [
        false,
        null,
        null,
        null,
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Articles ArticlesComponent isLoading render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ArticlesComponent
    articles={Array []}
    authorId=""
    classes={
      Object {
        "root": "",
      }
    }
    errorMsg={null}
    isLoaded={false}
    isLoading={true}
    onClearArticles={[Function]}
    onGetAllArticles={[Function]}
    onGetArticlesByAuthorId={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        false,
        <div>
          <WithStyles(CircularIndeterminate) />
        </div>,
        null,
        null,
      ],
    },
    "ref": null,
    "rendered": Array [
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <WithStyles(CircularIndeterminate) />,
          "className": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
      null,
      null,
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          false,
          <div>
            <WithStyles(CircularIndeterminate) />
          </div>,
          null,
          null,
        ],
      },
      "ref": null,
      "rendered": Array [
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <WithStyles(CircularIndeterminate) />,
            "className": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
        null,
        null,
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Articles ArticlesComponent render <List /> render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ArticlesComponent
    articles={
      Array [
        Object {
          "_id": "PropTypes.string.isRequired",
          "author_id": "PropTypes.string.isRequired",
          "author_name": "PropTypes.string.isRequired",
          "created_at": "PropTypes.string.isRequired",
          "text": "PropTypes.string.isRequired",
          "title": "PropTypes.string.isRequired",
          "updated_at": "PropTypes.string.isRequired",
        },
      ]
    }
    authorId=""
    classes={
      Object {
        "root": "",
      }
    }
    errorMsg={null}
    isLoaded={true}
    isLoading={false}
    onClearArticles={[Function]}
    onGetAllArticles={[Function]}
    onGetArticlesByAuthorId={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <div
          className=""
        >
          <WithStyles(List)
            component="nav"
          >
            <WithStyles(ListItem)>
              <withRouter(Connect(WithStyles(ArticleComponent)))
                article={
                  Object {
                    "_id": "PropTypes.string.isRequired",
                    "author_id": "PropTypes.string.isRequired",
                    "author_name": "PropTypes.string.isRequired",
                    "created_at": "PropTypes.string.isRequired",
                    "text": "PropTypes.string.isRequired",
                    "title": "PropTypes.string.isRequired",
                    "updated_at": "PropTypes.string.isRequired",
                  }
                }
              />
            </WithStyles(ListItem)>
          </WithStyles(List)>
        </div>,
        null,
        null,
        null,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <WithStyles(List)
            component="nav"
          >
            <WithStyles(ListItem)>
              <withRouter(Connect(WithStyles(ArticleComponent)))
                article={
                  Object {
                    "_id": "PropTypes.string.isRequired",
                    "author_id": "PropTypes.string.isRequired",
                    "author_name": "PropTypes.string.isRequired",
                    "created_at": "PropTypes.string.isRequired",
                    "text": "PropTypes.string.isRequired",
                    "title": "PropTypes.string.isRequired",
                    "updated_at": "PropTypes.string.isRequired",
                  }
                }
              />
            </WithStyles(ListItem)>
          </WithStyles(List)>,
          "className": "",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <WithStyles(ListItem)>
                <withRouter(Connect(WithStyles(ArticleComponent)))
                  article={
                    Object {
                      "_id": "PropTypes.string.isRequired",
                      "author_id": "PropTypes.string.isRequired",
                      "author_name": "PropTypes.string.isRequired",
                      "created_at": "PropTypes.string.isRequired",
                      "text": "PropTypes.string.isRequired",
                      "title": "PropTypes.string.isRequired",
                      "updated_at": "PropTypes.string.isRequired",
                    }
                  }
                />
              </WithStyles(ListItem)>,
            ],
            "component": "nav",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "PropTypes.string.isRequired",
              "nodeType": "class",
              "props": Object {
                "children": <withRouter(Connect(WithStyles(ArticleComponent)))
                  article={
                    Object {
                      "_id": "PropTypes.string.isRequired",
                      "author_id": "PropTypes.string.isRequired",
                      "author_name": "PropTypes.string.isRequired",
                      "created_at": "PropTypes.string.isRequired",
                      "text": "PropTypes.string.isRequired",
                      "title": "PropTypes.string.isRequired",
                      "updated_at": "PropTypes.string.isRequired",
                    }
                  }
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "article": Object {
                    "_id": "PropTypes.string.isRequired",
                    "author_id": "PropTypes.string.isRequired",
                    "author_name": "PropTypes.string.isRequired",
                    "created_at": "PropTypes.string.isRequired",
                    "text": "PropTypes.string.isRequired",
                    "title": "PropTypes.string.isRequired",
                    "updated_at": "PropTypes.string.isRequired",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": "div",
      },
      null,
      null,
      null,
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <div
            className=""
          >
            <WithStyles(List)
              component="nav"
            >
              <WithStyles(ListItem)>
                <withRouter(Connect(WithStyles(ArticleComponent)))
                  article={
                    Object {
                      "_id": "PropTypes.string.isRequired",
                      "author_id": "PropTypes.string.isRequired",
                      "author_name": "PropTypes.string.isRequired",
                      "created_at": "PropTypes.string.isRequired",
                      "text": "PropTypes.string.isRequired",
                      "title": "PropTypes.string.isRequired",
                      "updated_at": "PropTypes.string.isRequired",
                    }
                  }
                />
              </WithStyles(ListItem)>
            </WithStyles(List)>
          </div>,
          null,
          null,
          null,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <WithStyles(List)
              component="nav"
            >
              <WithStyles(ListItem)>
                <withRouter(Connect(WithStyles(ArticleComponent)))
                  article={
                    Object {
                      "_id": "PropTypes.string.isRequired",
                      "author_id": "PropTypes.string.isRequired",
                      "author_name": "PropTypes.string.isRequired",
                      "created_at": "PropTypes.string.isRequired",
                      "text": "PropTypes.string.isRequired",
                      "title": "PropTypes.string.isRequired",
                      "updated_at": "PropTypes.string.isRequired",
                    }
                  }
                />
              </WithStyles(ListItem)>
            </WithStyles(List)>,
            "className": "",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <WithStyles(ListItem)>
                  <withRouter(Connect(WithStyles(ArticleComponent)))
                    article={
                      Object {
                        "_id": "PropTypes.string.isRequired",
                        "author_id": "PropTypes.string.isRequired",
                        "author_name": "PropTypes.string.isRequired",
                        "created_at": "PropTypes.string.isRequired",
                        "text": "PropTypes.string.isRequired",
                        "title": "PropTypes.string.isRequired",
                        "updated_at": "PropTypes.string.isRequired",
                      }
                    }
                  />
                </WithStyles(ListItem)>,
              ],
              "component": "nav",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "PropTypes.string.isRequired",
                "nodeType": "class",
                "props": Object {
                  "children": <withRouter(Connect(WithStyles(ArticleComponent)))
                    article={
                      Object {
                        "_id": "PropTypes.string.isRequired",
                        "author_id": "PropTypes.string.isRequired",
                        "author_name": "PropTypes.string.isRequired",
                        "created_at": "PropTypes.string.isRequired",
                        "text": "PropTypes.string.isRequired",
                        "title": "PropTypes.string.isRequired",
                        "updated_at": "PropTypes.string.isRequired",
                      }
                    }
                  />,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "article": Object {
                      "_id": "PropTypes.string.isRequired",
                      "author_id": "PropTypes.string.isRequired",
                      "author_name": "PropTypes.string.isRequired",
                      "created_at": "PropTypes.string.isRequired",
                      "text": "PropTypes.string.isRequired",
                      "title": "PropTypes.string.isRequired",
                      "updated_at": "PropTypes.string.isRequired",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": "div",
        },
        null,
        null,
        null,
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Articles ArticlesComponent with errorMsg render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ArticlesComponent
    articles={Array []}
    authorId=""
    classes={
      Object {
        "root": "",
      }
    }
    errorMsg="Something going wrong"
    isLoaded={false}
    isLoading={false}
    onClearArticles={[Function]}
    onGetAllArticles={[Function]}
    onGetArticlesByAuthorId={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        false,
        null,
        null,
        <span
          id="articles-error-message"
        >
          Something going wrong
        </span>,
      ],
    },
    "ref": null,
    "rendered": Array [
      false,
      null,
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Something going wrong",
          "className": undefined,
          "id": "articles-error-message",
        },
        "ref": null,
        "rendered": "Something going wrong",
        "type": "span",
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          false,
          null,
          null,
          <span
            id="articles-error-message"
          >
            Something going wrong
          </span>,
        ],
      },
      "ref": null,
      "rendered": Array [
        false,
        null,
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Something going wrong",
            "className": undefined,
            "id": "articles-error-message",
          },
          "ref": null,
          "rendered": "Something going wrong",
          "type": "span",
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
